# vac-metad

./: 1-setup-ala2.ipynb  2-unbiased-simulation.ipynb  2-vacuum-simulation.ipynb  2.5-vacuum-simulation.ipynb  3-datarich-srv.ipynb  4-datarich-metad.ipynb  4-datarich-srv.ipynb  5-datarich-metad.ipynb  6-datarich-opes.ipynb  CLAUDE.md  NOTEBOOK.md  README.md  SETUP.md  main.py  pyproject.toml  test-1a-acf.ipynb  test-1b-acf-vac.ipynb  test-1d-pdf.ipynb
src/: DataHandles.py  DefaultMixin.py  acf.py  bias_shift_exact.py  biases_trajectory.py  data.py  dataclass.py  dataset.py  gaussians.py  grid2d.py  hist2d.py  kde.py  kernel.py  math.py  metad.py  msm.py  param.py  peaks.py  plots.py  test_gaussians.py  util.py  vampnet.py
