[project]
name = "vac-metad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.8",
    "kdepy>=1.1.12",
    "matplotlib>=3.10.9",
    "mdtraj>=1.11.1.post1",
    "openmm>=8.5.2",
    "openmm-cuda-12>=8.5.2",
    "pymbar>=4.0.3",
    "scikit-learn>=1.9.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.68.2",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[dependency-groups]
dev = [
    "black>=26.5.1",
]
