[project]
name = "vac-metad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "cupy-cuda13x>=14.1.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.8",
    "kdepy>=1.1.12",
    "matplotlib>=3.10.9",
    "mdtraj>=1.11.1.post1",
    "openmm>=8.5.2",
    "openmm-cuda-13>=8.5.2",
    "openmmtorch[cuda13]>=1.5",
    "pymbar>=4.0.3",
    "pytest>=9.1.0",
    "scikit-learn>=1.9.0",
    "tables>=3.11.1",
    "torch>=2.9,<2.10",
    "torchvision>=0.24,<0.25",   # 0.24.x pairs with torch 2.9.x
    "tqdm>=4.68.2",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[dependency-groups]
dev = [
    "black>=26.5.1",
]
